--- a/android/app/src/main/res/values-night/strings.xml
+++ b/android/app/src/main/res/values-night/strings.xml
@@ -130,4 +130,7 @@
     <string name="video_source">视频源</string>
     <string name="audio_source">音频源</string>
     <string name="subtitle_source">字幕源</string>
+    <string name="subtitle_delay">调整字幕延时</string>
+    <string name="subtitle_position">字幕显示位置偏移</string>
+    <string name="advance_config_warning">对于部分播放器实现，某些配置可能无效</string>
 </resources>
