--- a/android/app/src/main/res/values-night/strings.xml
+++ b/android/app/src/main/res/values-night/strings.xml
@@ -139,4 +139,5 @@
     <string name="player_exo">EXO</string>
     <string name="exit_after_crash">遇到未处理异常，退出应用</string>
     <string name="auto_play_next_episode">自动播放下一集(如果有)</string>
+    <string name="app_logo">App Logo</string>
 </resources>
