--- a/android/app/src/main/res/values-television/strings.xml
+++ b/android/app/src/main/res/values-television/strings.xml
@@ -98,4 +98,5 @@
     <string name="local_file">本地文件</string>
     <string name="add_folder">添加目录</string>
     <string name="add_folder_success">目录添加成功</string>
+    <string name="iplay">iPlay</string>
 </resources>
